Loads of fixes due to new library versions